# Learning_Hamiltonians

./: .buildinfo  README.md  genindex.html  index.html  installation.html  intro.html  learn.html  objects.inv  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: main.yml
Learning_Hamiltonians/: main.py  nn_functions.py
_sources/: index.rst.txt  intro.rst.txt  learn.rst.txt
code/: __init__.py  learn_hamiltonian.ipynb  main.py  nn_functions.py  trajectories.py
docs/: Learning_Hamiltonians.code-workspace  conf.py  index.rst  intro.rst  learn.rst
docs/_templates/: conf.py
