[metadata]
name = Learning_Hamiltonians
version = 0.1
author = Andrea Leone, Davide Murari
author_email = andrea.leone@ntnu.no, davide.murari@ntnu.no
description = Python code to learn the Hamiltonian of a mechanical system
url = https://github.com/
project_urls =
    Code=https://github.com/THREAD-3-2/Learning_Hamiltonians/blob/main/code/
    # Issues = 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
install_requires =
    scipy
    matplotlib
    autograd
    #autograd.numpy
    torch #pytorch

python_requires = >=3.7
setup_requires =
    setuptools>=42
    wheel

[options.packages.find]
exclude =
    tests
